--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -97,6 +97,13 @@ jobs:
       - name: Calculate SHA checksum (${{ matrix.version }})
         run: sha256sum "/tmp/simplesamlphp-$VERSION-${{ matrix.version }}.tar.gz"
 
+  website:
+    name: Build website
+    runs-on: [ubuntu-latest]
+    strategy:
+      fail-fast: false
+
+    steps:
       - name: Run website build
         if: |
           startsWith(github.ref, 'refs/tags/v') &&
