--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -101,6 +101,12 @@ jobs:
       - name: Calculate SHA checksum (${{ matrix.version }})
         run: sha256sum "$TARGET"
 
+  website:
+    name: Build website
+    runs-on: [ubuntu-latest]
+    strategy:
+      fail-fast: false
+    steps:
       - name: Run website build
         if: |
           startsWith(github.ref, 'refs/tags/v') &&
