after a composer update to verify syntax

--- a/composer.json
+++ b/composer.json
@@ -137,6 +137,6 @@
     },
     "scripts": {
         "translations:unused": "php bin/translations translations:unused",
-        "translations:update:translatable": "php bin/translations translations:update:translatable",
+        "translations:update:translatable": "php bin/translations translations:update:translatable"
     }
 }
