Configurably allow "Test Authentication Sources" for saml:SP authsources.

--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -294,6 +294,12 @@ $config = [
     ],
      */
 
+    /*
+     * Allow public access to the admin module "Test Authentication Sources"
+     * with only saml:SP authsources listed.
+     */
+    'sp.public.test' => false,
+
 
     /************************
      | ERRORS AND DEBUGGING |
