Exclude .phive dir from tarball release

--- a/.gitattributes
+++ b/.gitattributes
@@ -22,3 +22,4 @@ phpunit.xml export-ignore
 .markdownlint.yml export-ignore
 .markdownlintrc export-ignore
 *.php.dist linguist-language=php
+.phive
