--- a/composer.json
+++ b/composer.json
@@ -70,11 +70,12 @@
         "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.1",
         "simplesamlphp/composer-module-installer": "^1.3",
-        "simplesamlphp/saml2": "^5.0.0-alpha.14",
-        "simplesamlphp/saml2-legacy": "^4.17",
-        "simplesamlphp/simplesamlphp-assets-base": "^2.1.5",
+        "simplesamlphp/saml2": "^5@dev",
+        "simplesamlphp/saml2-legacy": "^4.18.1",
+        "simplesamlphp/simplesamlphp-assets-base": "~2.4.0",
         "simplesamlphp/simplesamlphp-module-adfs": "^2.1",
         "simplesamlphp/xml-common": "^1.13",
+        "simplesamlphp/xml-security": "^1.7",
         "symfony/cache": "^6.4.0",
         "symfony/config": "^6.4.0",
         "symfony/console": "^6.4.0",
