--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
         "phpmailer/phpmailer": "^6.8",
         "psr/log": "^3.0",
         "simplesamlphp/assert": "^1.1",
-        "simplesamlphp/composer-module-installer": "^1.3",
+        "simplesamlphp/composer-module-installer": "~1.3.6",
         "simplesamlphp/saml2": "^4.17",
         "simplesamlphp/simplesamlphp-assets-base": "~2.3.0",
         "simplesamlphp/xml-security": "^1.7",
