--- a/composer.json
+++ b/composer.json
@@ -128,7 +128,18 @@
     },
     "scripts": {
         "translations:unused": "php bin/translations translations:unused",
-        "translations:update:translatable": "php bin/translations translations:update:translatable"
+        "translations:update:translatable": "php bin/translations translations:update:translatable",
+        "clear-cache": [
+            "php bin/clearcache"
+        ],
+        "post-update-cmd": [
+            "@clear-cache",
+            "echo 'Post-update tasks completed!'"
+        ],
+        "post-install-cmd": [
+            "@clear-cache",
+            "echo 'Post-install tasks completed!'"
+        ]
     },
     "version": "v2.4.0"
 }
