Overrirde CacheClear Symfony Command

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -57,6 +57,9 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
+
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
 
@@ -123,6 +126,9 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
+
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
 
@@ -178,6 +184,9 @@ jobs:
           git config --global core.eol lf
 
       - uses: actions/checkout@v4
+
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
 
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
@@ -240,6 +249,9 @@ jobs:
           git config --global core.eol lf
 
       - uses: actions/checkout@v4
+
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
 
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$env:GITHUB_ENV"
