--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -61,7 +61,7 @@ jobs:
         run: cp config/config.php.dist config/config.php
 
       - name: Create SimpleSAMLphp cache directory
-        run: mkdir -p /var/cache/simplesamlphp
+        run: sudo mkdir -p /var/cache/simplesamlphp && chmod 777 /var/cache/simplesamlphp
 
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
@@ -133,7 +133,7 @@ jobs:
         run: cp config/config.php.dist config/config.php
 
       - name: Create SimpleSAMLphp cache directory
-        run: mkdir -p /var/cache/simplesamlphp
+        run: sudo mkdir -p /var/cache/simplesamlphp && chmod 777 /var/cache/simplesamlphp
 
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
@@ -195,7 +195,7 @@ jobs:
         run: cp config/config.php.dist config/config.php
 
       - name: Create SimpleSAMLphp cache directory
-        run: mkdir -p /var/cache/simplesamlphp
+        run: sudo mkdir -p /var/cache/simplesamlphp && chmod 777 /var/cache/simplesamlphp
 
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
@@ -259,12 +259,6 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Copy config.php.dist to config.php
-        run: cp config/config.php.dist config/config.php
-
-      - name: Create SimpleSAMLphp cache directory
-        run: mkdir -p /var/cache/simplesamlphp
-
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$env:GITHUB_ENV"
 
@@ -276,7 +270,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        run: composer install --no-progress --prefer-dist --optimize-autoloader --no-scripts
 
       - name: Run unit tests
         run: ./vendor/bin/phpunit --no-coverage
