Clear more caches during update.
Clear the symfony cache to make sure that the ssp-clear command can be found

Using the name "clear-cache" for this script also gave the warning
```
 A script named clear-cache would override a Composer command and has been skipped
```

--- a/composer.json
+++ b/composer.json
@@ -129,15 +129,16 @@
     "scripts": {
         "translations:unused": "php bin/translations translations:unused",
         "translations:update:translatable": "php bin/translations translations:update:translatable",
-        "clear-cache": [
+        "clear-symfony-cache": [
+            "php bin/console     cache:clear --no-warmup",
             "php bin/console ssp-cache:clear --no-warmup"
         ],
         "post-update-cmd": [
-            "@clear-cache",
+            "@clear-symfony-cache",
             "echo 'Post-update tasks completed!'"
         ],
         "post-install-cmd": [
-            "@clear-cache",
+            "@clear-symfony-cache",
             "echo 'Post-install tasks completed!'"
         ]
     },
