--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -64,6 +64,12 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
+
+      - name: Create SimpleSAMLphp cache directory
+        run: sudo mkdir -p /var/cache/simplesamlphp && sudo chmod 777 /var/cache/simplesamlphp
+
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
 
@@ -142,6 +148,12 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
+
+      - name: Create SimpleSAMLphp cache directory
+        run: sudo mkdir -p /var/cache/simplesamlphp && sudo chmod 777 /var/cache/simplesamlphp
+
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
 
@@ -198,6 +210,12 @@ jobs:
           git config --global core.eol lf
 
       - uses: actions/checkout@v4
+
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
+
+      - name: Create SimpleSAMLphp cache directory
+        run: sudo mkdir -p /var/cache/simplesamlphp && sudo chmod 777 /var/cache/simplesamlphp
 
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
@@ -273,7 +291,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader --ignore-platform-req=ext-posix
+        run: composer install --no-progress --prefer-dist --optimize-autoloader --ignore-platform-req=ext-posix --no-scripts
 
       - name: Run unit tests
         run: vendor/bin/phpunit --no-coverage
