--- a/routing/services/console.yml
+++ b/routing/services/console.yml
@@ -4,3 +4,9 @@ services:
   # default configuration for services in *this* file
   _defaults:
     public: false
+
+  SimpleSAML\Command\SspCacheClearCommand:
+    tags: ['console.command']
+    arguments:
+      $cacheClearer: '@cache_clearer'
+      $filesystem: '@filesystem'
