Clear caches script and hook (#2410)
* Clear caches script and hooke

* Use symofony cache:clear for each module and core

* Overrirde CacheClear Symfony Command

* Github Actions: Create the cache directory.

* Fixing simplesamlphp cache directory

* Fixing chmod permissions

* Fix phpcs issues

* Fix indentation

* config.php.dist file

* config.php.dist file

* Fix failing test after adding the config.php file

* Fix failing test after adding the config.php file

* Clear more caches during update.

Clear the symfony cache to make sure that the ssp-clear command can be found

Using the name "clear-cache" for this script also gave the warning
```
 A script named clear-cache would override a Composer command and has been skipped
```

* Update the docs to be more of a strong recommendation

If we are playing with the cache from composer we really want to
encourage the user to setup that var directory the way that symfony
are wanting it to be setup.

* Include .php.dist files in the sniffer

* Revert previous

---------

Co-authored-by: Tim van Dijen <tvdijen@gmail.com>
Co-authored-by: Ben Martin <monkeyiq@users.sourceforge.net>

--- a/composer.json
+++ b/composer.json
@@ -128,7 +128,19 @@
     },
     "scripts": {
         "translations:unused": "php bin/translations translations:unused",
-        "translations:update:translatable": "php bin/translations translations:update:translatable"
+        "translations:update:translatable": "php bin/translations translations:update:translatable",
+        "clear-symfony-cache": [
+            "php bin/console     cache:clear --no-warmup",
+            "php bin/console ssp-cache:clear --no-warmup"
+        ],
+        "post-update-cmd": [
+            "@clear-symfony-cache",
+            "echo 'Post-update tasks completed!'"
+        ],
+        "post-install-cmd": [
+            "@clear-symfony-cache",
+            "echo 'Post-install tasks completed!'"
+        ]
     },
     "version": "v2.4.0"
 }
