--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -57,6 +57,12 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
+
+      - name: Create SimpleSAMLphp cache directory
+        run: sudo mkdir -p /var/cache/simplesamlphp && sudo chmod 777 /var/cache/simplesamlphp
+
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
 
@@ -123,6 +129,12 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
+
+      - name: Create SimpleSAMLphp cache directory
+        run: sudo mkdir -p /var/cache/simplesamlphp && sudo chmod 777 /var/cache/simplesamlphp
+
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
 
@@ -178,6 +190,12 @@ jobs:
           git config --global core.eol lf
 
       - uses: actions/checkout@v4
+
+      - name: Copy config.php.dist to config.php
+        run: cp config/config.php.dist config/config.php
+
+      - name: Create SimpleSAMLphp cache directory
+        run: sudo mkdir -p /var/cache/simplesamlphp && sudo chmod 777 /var/cache/simplesamlphp
 
       - name: Get composer cache directory
         run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
@@ -252,7 +270,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        run: composer install --no-progress --prefer-dist --optimize-autoloader --no-scripts
 
       - name: Run unit tests
         run: ./vendor/bin/phpunit --no-coverage
