try explicit hold back

--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,10 @@
         "simplesamlphp/saml2": "^4.17",
         "simplesamlphp/simplesamlphp-assets-base": "~2.3.0",
         "simplesamlphp/xml-security": "^1.7",
+        "symfony/error-handler": "~6.4.22",
+        "symfony/event-dispatcher": "~6.4.13",
+        "symfony/string": "~6.4.21",
+        "symfony/var-dumper": "~6.4.21",
         "symfony/cache": "^6.4",
         "symfony/config": "^6.4",
         "symfony/console": "^6.4",
