Another way to return a 405 if calling SSO with HEAD req.
This relates to https://github.com/simplesamlphp/simplesamlphp/pull/2475

--- a/modules/saml/routing/routes/routes.yml
+++ b/modules/saml/routing/routes/routes.yml
@@ -64,6 +64,13 @@ saml-legacy-sp-metadata:
   }
   methods: [GET]
 
+websso-single-sign-on-head:
+  path: /idp/singleSignOnService
+  defaults: {
+    _controller: 'SimpleSAML\Module\saml\Controller\WebBrowserSingleSignOn::headRequestNotAllowed'
+  }
+  methods: [HEAD]
+  
 websso-single-sign-on:
   path: /idp/singleSignOnService
   defaults: {
