--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,8 @@
         "symfony/var-exporter": "^6.4",
         "symfony/yaml": "^6.4",
         "twig/intl-extra": "^3.7",
-        "twig/twig": "^3.14.0"
+        "twig/twig": "^3.14.0",
+        "symfony/expression-language": "6.4"
     },
     "require-dev": {
         "ext-curl": "*",
