--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,7 @@
         "symfony/config": "^6.4.0",
         "symfony/console": "^6.4.0",
         "symfony/dependency-injection": "^6.4.0",
+        "symfony/expression-language": "~6.4.0",
         "symfony/filesystem": "^6.4.0",
         "symfony/finder": "^6.4.0",
         "symfony/framework-bundle": "^6.4.0",
