--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
         "symfony/config": "^6.4",
         "symfony/console": "^6.4",
         "symfony/dependency-injection": "^6.4",
+        "symfony/expression-language": "~6.4.0",
         "symfony/filesystem": "^6.4",
         "symfony/finder": "^6.4",
         "symfony/framework-bundle": "^6.4",
