Move to assets.secretsalt for the new asset salt
I may have missed an easy way to talk the config array to find
something. I added getOptionalStringNested to allow assets.secretsalt
to be fetched in the same way that it could be done if it was just a
foo.bar.baz single key in the config file.

--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -191,11 +191,6 @@ $config = [
      */
     'secretsalt' => 'defaultsecretsalt',
 
-    /*
-     * Used to generate cache buster tags. This salt is only used for this purpose.
-     * you should set this in the same way as secretsalt
-     */
-    'assets.secretsalt' => 'default.assets.secretsalt',
     
     /*
      * This password must be kept secret, and modified from the default value 123.
@@ -932,6 +927,12 @@ $config = [
      * The serving of the resources can be configured through these settings.
      */
     'assets' => [
+        /*
+         * Used to generate cache buster tags. This salt is only used for this purpose.
+         * you should set this in the same way as secretsalt
+         */
+        'secretsalt' => 'assets.secretsalt.default',
+
         /*
          * These settings adjust the caching headers that are sent
          * when serving static resources.
